# config/routes.php
@@ -1,6 +1,12 @@
 <?php
 
 use Slim\App;
+use App\Shared\Infrastructure\Controller\ServiceController;
+use App\Admin\Infrastructure\Controller\AdminMigrationsController;
+use App\Product\Infrastructure\Controller\ProductController;
+use App\Order\Controller\OrderController;
+use App\Auth\Controller\AuthController;
+use App\Customer\Infrastructure\Controller\CustomerController;
 
 return function (App $app) {
     $app->get('/', function ($request, $response, $args) {
@@ -11,7 +17,7 @@ return function (App $app) {
 
 
     $app->group('/api', function ($app) {
-        $app->get('/health', \App\Shared\Infrastructure\Controller\ServiceController::class . ':health');
+        $app->get('/health', ServiceController::class . ':health');
 
         $app->get('/doc', function ($request, $response, $args) {
             $schema = file_get_contents(__DIR__ . '/../public/swagger.json');
@@ -30,41 +36,41 @@ return function (App $app) {
 
         $app->group('/admin', function ($app) {
             $app->group('/migrations', function ($app) {
-                $app->get('/up', \App\Admin\Infrastructure\Controller\AdminMigrationsController::class . ':up');
-                $app->get('/down', \App\Admin\Infrastructure\Controller\AdminMigrationsController::class . ':down');
+                $app->get('/up', AdminMigrationsController::class . ':up');
+                $app->get('/down', AdminMigrationsController::class . ':down');
             });
         });
-      
+
 
         $app->group('/product', function ($app) {
-            $app->get('/products', \App\Product\Infrastructure\Controller\ProductController::class . ':getProducts');
-            $app->get('/products/{id}', \App\Product\Infrastructure\Controller\ProductController::class . ':getProduct');
+            $app->get('/products', ProductController::class . ':getProducts');
+            $app->get('/products/{id}', ProductController::class . ':getProduct');
         });
 
         $app->group('/customer', function ($app) {
-            $app->get('/account/{id}', \App\Customer\Infrastructure\Controller\CustomerController::class . ':getAccountData');
-            $app->put('/account/{id}', \App\Customer\Infrastructure\Controller\CustomerController::class . ':updateAccountData');
-            $app->delete('/account/{id}', \App\Customer\Infrastructure\Controller\CustomerController::class . ':deleteAccount');
+            $app->get('/account/{id}', CustomerController::class . ':getAccountData');
+            $app->put('/account/{id}', CustomerController::class . ':updateAccountData');
+            $app->delete('/account/{id}', CustomerController::class . ':deleteAccount');
         });
 
         $app->group('/auth', function ($app) {
-            $app->post('/login', \App\Auth\Infrastructure\Controller\AuthController::class . ':login');
-            $app->post('/register', \App\Auth\Infrastructure\Controller\AuthController::class . ':register');
-            $app->post('/logout', \App\Auth\Infrastructure\Controller\AuthController::class . ':logout');
-            $app->post('/refresh', \App\Auth\Infrastructure\Controller\AuthController::class . ':refresh');
+            $app->post('/login', AuthController::class . ':login');
+            $app->post('/register', AuthController::class . ':register');
+            $app->post('/logout', AuthController::class . ':logout');
+            $app->post('/refresh', AuthController::class . ':refresh');
         });
 
         $app->group('/order', function ($app) {
-            $app->get('/orders', \App\Order\Infrastructure\Controller\OrderController::class . ':getOrders');
-            $app->get('/orders/{id}', \App\Order\Infrastructure\Controller\OrderController::class . ':getOrder');
-            $app->post('/orders', \App\Order\Infrastructure\Controller\OrderController::class . ':createOrder');
-            $app->put('/orders/{id}', \App\Order\Infrastructure\Controller\OrderController::class . ':updateOrder');
-            $app->delete('/orders/{id}', \App\Order\Infrastructure\Controller\OrderController::class . ':deleteOrder');
+            $app->get('/orders', OrderController::class . ':getOrders');
+            $app->get('/orders/{id}', OrderController::class . ':getOrder');
+            $app->post('/orders', OrderController::class . ':createOrder');
+            $app->put('/orders/{id}', OrderController::class . ':updateOrder');
+            $app->delete('/orders/{id}', OrderController::class . ':deleteOrder');
         });
 
         $app->get('/{path}', function ($request, $response, $args) {
             $path = explode('.', (string)$request->getAttribute('path'));
-            
+
             if (count($path) != 2) {
                 $response = $response->withStatus(404);
                 return $response;
